--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ div {
 
 .edit_photo {
     padding: 20px 0 0 85px;
-    height: 340px;
+    height: 350px;
 }
 
 .photo_prev {
@@ -215,14 +215,26 @@ div {
     overflow: hidden;
 }
 
+.nav-item {
+    width: 25%;
+}
+
+.nav-link {
+    text-align: center
+}
+
+.container {
+    width:444px;
+    padding: 0;
+    margin: 0;
+}
+
 .all_photo {
     width: 420px;
     height: 162px;
     padding: 10px 8px 0 15px;
     background-color: #f4feff;
     border: solid 1px #aec7cb;
-    position: relative;
-    top: -1px;
     z-index: 0;
 }
 
@@ -244,6 +256,7 @@ div {
 .all_photo div img {
     width: 48px;
     height: 48px;
+    cursor:pointer;
 }
 
 .save_photo {
@@ -422,7 +435,7 @@ input {
 
 .my_work {
     width: 213px;
-    height: 16px;
+    height: 20px;
     padding: 1px;
     border: solid 1px #a1a1a1;
     margin-right: 5px;
@@ -449,9 +462,9 @@ input {
     margin-right: 10px;
 }
 
-.list_edit .add_textarea_gray {
+/* .list_edit .add_textarea_gray {
     color: #a6a6a6;
-}
+} */
 
 .list_edit .text_interest {
     width: 435px;
