--- a/style.css
+++ b/style.css
@@ -494,18 +494,16 @@ input {
     float: left;
 }
 
-/* 评论 */
+/* 社区--评论--我的评论 */
 .my_main {
     width: 780px;
-    padding: 0 0 0 10px;
     float: left;
+    margin: 10px 0 20px 10px;
 }
 .points {
     background-color: #fffbe7;
     border: 1px solid #ffecb2;
     line-height: 34px;
-    padding: 0 10px;
-    font-size: 14px;
 }
 .fr {
     float: right;
@@ -515,6 +513,7 @@ input {
     padding: 20px 0 0;
     word-break: break-all;
 }
+
 .order {
     border: 1px solid #dcdcdc;
     margin-bottom: 20px;
@@ -525,18 +524,42 @@ input {
     background-color: #f5f5f5;
 }
 .order_head .info {
-    width: 445px;
+    width: 350px;
     padding-left: 15px;
     float: left;
+}
+.order_head .info span {
+    width: 100px;
+    color: #323232;
+    display: inline-block;
+}
+.order_head .info span {
+    width: 100px;
+    color: #323232;
+    display: inline-block;
 }
 .order_head .shop {
     float: left;
 }
+.order_head .shop .icon {
+    width: 18px;
+    height: 18px;
+    vertical-align: text-bottom;
+    background: url(../dangdang/img/icon.png) 0 0 no-repeat;
+    display: inline-block;
+    margin-right: 6px;
+    vertical-align: middle\9;
+}
+.red {
+    color: #ff2832 !important;
+    font-size: 14px;
+}
 .order_box {
+    height:85px;
     padding: 20px 0 10px;
 }
 .order .carousel {
-    width: 600px;
+    width: 480px;
     position: relative;
     margin: 0 30px 0 20px;
     display: inline-block;
@@ -544,8 +567,7 @@ input {
 }
 .order .carousel .arrow.unable {
     opacity: 0.3;
-    filter: alpha(opacity=30);
-    cursor: default;
+    cursor: pointer;
 }
 .order .carousel .arrow {
     width: 18px;
@@ -553,27 +575,99 @@ input {
     position: absolute;
     left: 0;
     top: 17px;
-    background: url(../img/icon.png) 0 -18px no-repeat;
+    background: url(../dangdang/img/icon.png) 0 -18px no-repeat;
 }
 .order .carousel .arrow.right {
     left: auto;
     right: 0;
     background-position: -18px -18px;
 }
-/* 打星区域 */
+.order .goode_list {
+    width: 400px;
+    text-align: left;
+    padding: 0 20px;
+    display: inline-block;
+}
+.order .goode_list li {
+    margin: 0 6px 10px 0;
+    display: inline-block;
+    position: relative;
+}
+/* .order .goode_list a.goods.choosen {
+    border-color: #fd7f78;
+}
+.order .goode_list a.goods {
+    display: block;
+    width: 50px;
+    height: 50px;
+} */
 .order .comment {
     border-top: 1px solid #dcdcdc;
     padding-top: 20px;
     position: relative;
 }
+/* .order .comm_goods {
+    float: left;
+} */
 .order .book_com .left_show {
-    width: 150px;
+    width: 130px;
     padding: 0 70px 20px;
 }
+.order .comment .left_show {
+    padding: 0 40px 20px 80px;
+    width: 125px;
+    text-align: center;
+    line-height: 18px;
+    color: #b69d8f;
+    display: inline-block;
+    vertical-align: top;
+}
 .order .comment .right_show {
-    width: 500px;
-    height:300px;
+    /* width: 510px;
+    height: 230px; */
     display: inline-block;
     vertical-align: top;
     padding: 0 0 10px 0;
+}
+.order .comment .right_show .rating,.think,.upload{
+    height: 35px;
+    padding: 0 0 8px;
+}
+.order .comment .right_show .rela{
+    height: 110px;
+    padding: 0 0 8px;
+}
+.order .comment .right_show .name{
+    float: left;
+}
+.order .comment .right_show .txt {
+    width: 390px;
+    padding-left: 30px;
+    float: left;
+}
+.order .comment .right_show .txt_intro {
+    width: 390px;
+    height: 100px;
+    font-size: 12px;
+    padding: 2px 1px;
+    resize: none;
+    
+}
+.order .comment .right_show .upload{
+    height: 70px;
+    padding: 0 0 8px;
+}
+.upupload{
+    margin: 0 0 0 95px;
+    padding: 0;
+}
+
+.upFile{
+    float: left;
+}
+.upload_size {
+    height: 70px;
+    line-height: 120px;  
+    float: left; 
+    color:#969696;
 }
