--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ div {
 }
 
 .mydang_left {
-    width: 170px;
+    width:170px;
     height: 850px;
     float: left;
     border-top: 4px solid #999;
@@ -462,9 +462,7 @@ input {
     margin-right: 10px;
 }
 
-/* .list_edit .add_textarea_gray {
-    color: #a6a6a6;
-} */
+
 
 .list_edit .text_interest {
     width: 435px;
@@ -495,11 +493,59 @@ input {
 }
 
 /* 社区--评论--我的评论 */
-.my_main {
-    width: 780px;
-    float: left;
-    margin: 10px 0 20px 10px;
+.mydang {
+    width:1200px;
+    margin: auto;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+    background-color: #fff;
 }
+.my_main {
+    width:950px;
+    padding: 0 0 0 10px;
+    float: left;
+}
+/*左侧导航 */
+.mydang_left1 {
+    width:200px;
+    height: 850px;
+    float: left;
+    border-top: 4px solid #999;
+}
+.mydang_left1 .my_menu_title {
+    height: 62px;
+    line-height: 62px;
+    margin-bottom: 6px;
+    font-size: 16px;
+    background: url(http://myhome.dangdang.com/static/images/icon_menu.png) 42px 24px no-repeat #fafafa;
+    border: 1px solid #dcdcdc;
+    border-bottom: none 0;
+    padding-left: 64px;
+    font-weight: normal;
+}
+
+.mydang_left1 dl {
+    border: 1px solid #dcdcdc;
+    border-top: none 0;
+    width:150px;
+    margin: 0 auto;
+    padding: 16px 0 0 20px;
+}
+
+.mydang_left1 dt {
+    margin: 8px 0;
+    line-height: 18px;
+    font-size: 16px;
+    padding-left: 20px;
+    background: url(http://myhome.dangdang.com/static/images/icon_menu.png) 0 -35px no-repeat;
+}
+
+.mydang_left1 dd {
+    line-height: 20px;
+    padding-left: 20px;
+    font-size: 14px;
+}
+/* */
 .points {
     background-color: #fffbe7;
     border: 1px solid #ffecb2;
@@ -593,24 +639,15 @@ input {
     display: inline-block;
     position: relative;
 }
-/* .order .goode_list a.goods.choosen {
-    border-color: #fd7f78;
-}
-.order .goode_list a.goods {
-    display: block;
-    width: 50px;
-    height: 50px;
-} */
+
 .order .comment {
     border-top: 1px solid #dcdcdc;
     padding-top: 20px;
     position: relative;
 }
-/* .order .comm_goods {
-    float: left;
-} */
+
 .order .book_com .left_show {
-    width: 130px;
+    width: 152px;
     padding: 0 70px 20px;
 }
 .order .comment .left_show {
@@ -623,15 +660,20 @@ input {
     vertical-align: top;
 }
 .order .comment .right_show {
-    /* width: 510px;
-    height: 230px; */
     display: inline-block;
     vertical-align: top;
-    padding: 0 0 10px 0;
+    padding: 0 0 10px 160px;
 }
-.order .comment .right_show .rat,.think,.upload{
+.order .comment .right_show .think,.upload{
     height: 35px;
     padding: 0 0 8px;
+}
+.rat{
+    height: 35px;
+    padding: 0 0 8px;
+}
+.rating-lists{
+    margin-left: 80px;
 }
 .order .comment .right_show .rela{
     height: 110px;
@@ -641,11 +683,13 @@ input {
     font-size: 12px;
     float: left;
     color: #646464;
+    margin: 5px;
 }
 .order .comment .right_show .txt {
     width: 390px;
-    padding-left: 30px;
+    padding: 8px 0 0 30px;
     float: left;
+
 }
 .order .comment .right_show .txt_intro {
     width: 390px;
@@ -660,7 +704,7 @@ input {
     padding: 0 0 8px;
 }
 .upupload{
-    margin: 0 0 0 95px;
+    margin: 20px 0 0 85px;
     padding: 0;
 }
 
@@ -700,16 +744,14 @@ input {
     border-radius: 5px;
     margin-right: 20px;
 }
-/* .order .comment .submit .choose {
-    width: 14px;
-    height: 14px;
-    display: inline-block;
-    background: url(../dangdang/img/icon.png) -14px -54px no-repeat;
-    margin-right: 8px;
-    vertical-align: text-bottom;
-} */
 .unname_rating{
     font-size: 14px;
     color: #646464;
     padding: 0 0 10px 5px;
+}
+.rating-text{
+    float: left;
+}
+.rating-star{
+    float: left;
 }
